# fantasia

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dev.env  fantasia.toml  fantasia_full.toml  fantasia_small.toml  justfile  launchpg.sh
.github/workflows/: rust.yml
containers/postgres/: compose.yaml
docs/: plan.md
fantasia_web/: Cargo.toml
fantasia_web/src/: app.rs  lib.rs  routes.rs  state.rs
fantasia_web/src/app/: fantasia.rs  router.rs
fantasia_web/src/routes/: fallback_404.rs  health.rs  index.rs
migrations/: 20231119031311_fantasia.sql
src/: args.rs  config.rs  main.rs  pool_options.rs  telemetry.rs
tests/: health_check.rs
tests/common/: mod.rs
