[package]
name = "fantasia"
description = ""
authors = ["Josh Megnauth <jo.sh@tutanota.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/fantasia"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[profile.release]
lto = true
strip = "symbols"

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace]
members = ["fantasia_web"]

[dependencies]
# Fantasia crates
fantasia_web = { version = "0.2", path = "fantasia_web" }

# Async
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# CLI and config
dotenvy = "0.15"
pico-args = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Errors
anyhow = { version = "1", features = ["backtrace"] }

# Logging
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
# For tests proper
reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"] }
serde_test = "1"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
# env_logger = "0.10"

[dev-dependencies.sqlx]
version = "0.7"
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
]
