[package]
name = "fantasia_web"
description = "Back-end web service for fantasia"
authors = ["Josh Megnauth <jo.sh@tutanota.com>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/fantasia"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["release_max_level_info"]
release_max_level_info = ["tracing/release_max_level_info"]

[dependencies]
# Main web crates
axum = { version = "0.7", features = ["http2", "tracing"] }
hyper = { version = "1", features = ["http2", "server"] }
serde = { version = "1.0", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
  "compression-br",
  "compression-deflate",
  "compression-gzip",
  "decompression-br",
  "decompression-deflate",
  "decompression-gzip",
  "normalize-path",
  "request-id",
  "timeout",
  "trace",
  "util",
] }

# Async
futures = "0.3"
tokio = { version = "1", features = ["net"] }

# Logging and errors
thiserror = "1.0"
tracing = "0.1"

# Music
rspotify = { version = "0.12", features = ["env-file", "reqwest-rustls-tls"] }

# Misc.
uuid = { version = "1", features = ["v4"] }

# Security
argon2 = "0.5.2"
secrecy = "0.8"

[dependencies.sqlx]
version = "0.7"
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["rustls-tls"] }
